# django-blog

./: .gitignore  pyproject.toml
hexlet_django_blog/: settings.py
